# Sisyphus

./: .gitignore  .gitmodules  LICENSE  README.md
3D/: Main.20250315-001459.FCBak  Main.20250315-200631.FCBak  Main.20250315-213447.FCBak  Main.20250316-065146.FCBak  Main.FCStd  NewButton.FCStd  top_bar.20250315-201358.FCBak  top_bar.20250315-225137.FCBak  top_bar.FCStd
3D/STLs/: Main-Bottom.stl  Main-ButtonBase.stl  Main-ButtonCup.stl  Main-ButtonHolder.stl  Main-Hinge.stl  Main-Locker.stl  Main-PaperHolder.stl  NewButton-Bottom.stl  NewButton-CabbleHolder.stl  NewButton-KeyCap.stl  NewButton-Spring_3.stl  NewButton-Spring_4.stl  top_bar-bar_down.stl  top_bar-bar_up.stl  top_bar-led_plate.stl
src/hardware/: APDS9960.cpp  APDS9960.h  CMakeLists.txt  anooo.h  jetohovno.h  koule.h  main.cpp  namazat.h  odebrat.h  rozmazat.h  uznechci.h  vic.h  zdravim.h
src/hardware/rgb_sensor/: .clangd  APDS9960.cpp  main.cpp
src/hardware/sd_card_reader/: CMakeLists.txt  CMakeLists.txt~  cdCard_manipulation.cpp  hw_config.c  main.cpp  serial_test.py  serial_test_2.py  temp.txt  test.txt
src/web/: next.config.ts  package.json  pnpm-lock.yaml
src/web/actions/button/: edit.ts
src/web/actions/sheet/: create.ts  export.ts  upload.ts
src/web/app/api/file/[id]/: route.ts
src/web/app/dashboard/: layout.tsx  page.tsx
src/web/app/dashboard/configuration/: page.tsx
src/web/app/dashboard/configuration/@dialogs/(.)dialog/button/[id]/: page.tsx
src/web/app/dashboard/configuration/sheet/[sheetId]/: page.tsx
src/web/app/dashboard/configuration/sheet/[sheetId]/@dialogs/(.)dialog/sheet/new/: page.tsx
src/web/components/: app-sidebar.tsx  export-sheet-button.tsx  form-wrapper.tsx  image-card.tsx  nav-main.tsx  page-breadcrumb.tsx  voice-recorder.tsx
src/web/components/ui/: button.tsx  sidebar.tsx
src/web/prisma/: schema.prisma
